@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<!DOCTYPE a [
+   <!ELEMENT a EMPTY>
+   <!ELEMENT b EMPTY>
+]>
+<a></a>
+
